# trading212

./: .gitignore  LICENSE  README.md  app.py  pyproject.backup-toml  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-publish.yml
src/trading212py/: __init__.py  base.py  config.py  t212.py
test/: test_t212_2.py
trading212_py/: T212.INI  base.py  config.py  t212.py
trading212py/: __init__.py  base.py  decorators.py  t212.py
