[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "trading212py"
version = "0.1.2"
description = "A Python client for the Trading212 public API."
authors = ["Serdar Baran <none@g.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/serdarbaran/trading212"
repository = "https://github.com/serdarbaran/trading212"
documentation = "https://github.com/serdarbaran/trading212/blob/main/README.md"
keywords = ["trading212", "api", "client"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic:: Financial :: Investment :: ISA"
]

[tool.poetry.dependencies]
python = ">=3.12"
requests = "2.32.3"
python-dotenv = "1.0.1"
pydantic = "2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[tool.poetry.scripts]
trading212py = "trading212py.cli:main"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/serdarbaran/trading212/issues"
