[tool.poetry]
name = "trading212py"
version = "0.1.2"
description = "A Python client for the Trading212 public API."
authors = ["Serdar Baran <none@g.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/serdarbaran/trading212"
repository = "https://github.com/serdarbaran/trading212"
documentation = "https://github.com/serdarbaran/trading212/blob/main/README.md"
keywords = ["trading", "API", "client"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "trading212py", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
requests = "2.32.3"
python-dotenv = "1.0.1"
pydantic = "2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/serdarbaran/trading212/issues"